--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -11,6 +11,7 @@ body {
   // padding: 34px 12px 0;
   // padding: 40px 12px 0;
   padding: 49px 12px 0;
+  overflow-x: hidden;
   // position: relative;
   // top: -108px;
 
